vest-dsl/test/bad/enum_inconsistent_type_suffix.vest
bad_enum = enum {
  A = 0u8,
  B = 1u16,
  C = 2u8,
}
